--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,8 @@ dependencies = [
     "asyncpg",
     "psycopg2-binary",
     "pydantic-settings>=2.0.0",
-    "python-multipart"
+    "python-multipart",
+    "httpx"
 ]
 
 [build-system]
