Clean repository - remove local-only files from tracking
- Remove .env.example files from git tracking (keep locally)
- Remove documentation files (.md) except README.md
- Remove duedate.PNG image file
- Update .gitignore to exclude these files from future commits
- Keep files locally but exclude from repository

Files now local-only:
- All .env.example files
- Documentation files (DEPLOYMENT.md, etc.)
- duedate.PNG
- Various .md files

--- a/.gitignore
+++ b/.gitignore
@@ -96,21 +96,28 @@ Thumbs.db
 *.bak
 *.backup
 
-# Package files
-*.7z
-*.dmg
-*.gz
-*.iso
-*.jar
-*.rar
-*.tar
-*.zip
-
-# Configuration files (keep examples)
+# Configuration files (keep examples locally, exclude from repo)
 .env
 .env.local
 .env.production
 .env.staging
+.env.example
 
-# Keep example files
+# Documentation files (local only)
+*.md
+!README.md
+DEPLOYMENT.md
+FRONTEND_HANDOFF.md
+FRONTEND_HANDOFF_PERMISSIONS.md
+INTEGRATIONS.md
+LIGHTSAIL_SINGLE_INSTANCE.md
+LOCAL_DEV.md
+TASKS.md
+main.py.md
+summary.md
+
+# Image files (local only)
+duedate.PNG
+
+# Keep only README.md in repo
 !.env.example
