fix(child): use async driver DSN postgresql+asyncpg for SQLAlchemy async engine

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,7 +31,7 @@ services:
       - PARENT_URL=http://parent:8000
       - SUBDOMAIN=child
       - API_URL=http://child:8000
-      - DATABASE_URL=postgresql://${DB_USER:-postgres}:${DB_PASS:-postgres}@db:5432/parent_db
+      - DATABASE_URL=postgresql+asyncpg://${DB_USER:-postgres}:${DB_PASS:-postgres}@db:5432/parent_db
       - SECRET_KEY=${JWT_SECRET}
       - ALGORITHM=HS256
     ports:
