--- a/parent/frontend/nginx.conf
+++ b/parent/frontend/nginx.conf
@@ -6,6 +6,9 @@ http {
     include /etc/nginx/mime.types;
     default_type application/octet-stream;
 
+    # Use Docker's internal DNS resolver
+    resolver 127.0.0.11 valid=30s;
+
     server {
         listen 80;
         server_name localhost;
@@ -20,7 +23,8 @@ http {
         
         # Proxy API requests to parent backend
         location /api {
-            proxy_pass http://parent:8000;
+            set $upstream_parent parent:8000;
+            proxy_pass http://$upstream_parent;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
