--- a/nginx-ssl.conf
+++ b/nginx-ssl.conf
@@ -3,7 +3,7 @@ events { worker_connections 1024; }
 http {
   # Upstream definitions
   upstream child { server child:8000; }
-  upstream parent { server parent:8001; }
+  upstream parent { server parent:8000; }
   upstream frontend { server frontend:80; }
   upstream parent-frontend { server parent-frontend:80; }
 
@@ -123,7 +123,7 @@ http {
     }
     
     location /api/child/ {
-      proxy_pass http://child:8000;
+      proxy_pass http://child;
       proxy_set_header Host $host;
       proxy_set_header X-Real-IP $remote_addr;
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
