--- a/nginx.conf
+++ b/nginx.conf
@@ -59,9 +59,18 @@ http {
   }
 
   # Default server (fallback for unmatched domains)
+  # Default server (fallback for unmatched domains)
   server {
     listen 80 default_server;
     server_name _;
-    return 444;  # Close connection without response
+    
+    # FOR TESTING: Proxy to frontend so we can see it via IP
+    location / {
+      proxy_pass http://frontend;
+      proxy_set_header Host $host;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Proto $scheme;
+    }
   }
 }
