--- a/nginx-ssl.conf
+++ b/nginx-ssl.conf
@@ -17,7 +17,7 @@ http {
   # ADMIN DASHBOARD (dedicated subdomain)
   server {
     listen 80;
-    server_name admin.yourdomain.com;
+    server_name admin.nectarestates.com;
     
     # Redirect HTTP to HTTPS
     return 301 https://$server_name$request_uri;
@@ -25,11 +25,11 @@ http {
 
   server {
     listen 443 ssl http2;
-    server_name admin.yourdomain.com;
+    server_name admin.nectarestates.com;
     
     # SSL certificates
-    ssl_certificate /etc/letsencrypt/live/admin.yourdomain.com/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/admin.yourdomain.com/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/admin.nectarestates.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/admin.nectarestates.com/privkey.pem;
     
     # Security headers
     add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
@@ -104,8 +104,8 @@ http {
     }
     
     # SSL certificates (wildcard certificate for all client site subdomains)
-    ssl_certificate /etc/letsencrypt/live/yourdomain.com/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/yourdomain.com/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/nectarestates.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/nectarestates.com/privkey.pem;
     
     # Security headers
     add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
@@ -144,8 +144,8 @@ http {
     listen 443 ssl http2 default_server;
     server_name _;
     
-    ssl_certificate /etc/letsencrypt/live/yourdomain.com/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/yourdomain.com/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/nectarestates.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/nectarestates.com/privkey.pem;
     
     return 444;  # Close connection without response
   }
