--- a/nginx.conf
+++ b/nginx.conf
@@ -39,6 +39,11 @@ http {
       return 404;
     }
     
+    # Allow Certbot HTTP-01 challenge
+    location /.well-known/acme-challenge/ {
+        root /var/www/certbot;
+    }
+
     location / {
       proxy_pass http://frontend;
       proxy_set_header Host $host;
