--- a/nginx-ssl.conf
+++ b/nginx-ssl.conf
@@ -17,7 +17,7 @@ http {
   # ADMIN DASHBOARD (dedicated subdomain)
   server {
     listen 80;
-    server_name admin.nectarestates.com;
+    server_name app.viviplatform.com;
     
     # Redirect HTTP to HTTPS
     return 301 https://$server_name$request_uri;
@@ -25,11 +25,11 @@ http {
 
   server {
     listen 443 ssl http2;
-    server_name admin.nectarestates.com;
+    server_name app.viviplatform.com;
     
     # SSL certificates
-    ssl_certificate /etc/letsencrypt/live/admin.nectarestates.com/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/admin.nectarestates.com/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/viviplatform.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/viviplatform.com/privkey.pem;
     
     # Security headers
     add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
@@ -37,8 +37,8 @@ http {
     add_header X-Frame-Options "DENY" always;
     add_header X-XSS-Protection "1; mode=block" always;
     
-    # Block access to admin paths from client site subdomains
-    location ~ ^/admin {
+    # Block access to app paths from client site subdomains
+    location ~ ^/app {
       return 404;
     }
     
@@ -70,15 +70,15 @@ http {
   # CLIENT SITE DASHBOARDS (wildcard subdomain)
   server {
     listen 80;
-    server_name ~^(?<client_site>.+)\.yourdomain\.com$;
+    server_name ~^(?<client_site>.+)\.viviplatform\.com$;
     
-    # Block admin subdomain here
-    if ($client_site = "admin") {
+    # Block app subdomain here
+    if ($client_site = "app") {
       return 404;
     }
     
-    # Block access to admin paths from client site subdomains
-    location ~ ^/admin {
+    # Block access to app paths from client site subdomains
+    location ~ ^/app {
       return 404;
     }
     
@@ -96,16 +96,16 @@ http {
 
   server {
     listen 443 ssl http2;
-    server_name ~^(?<client_site>.+)\.yourdomain\.com$;
+    server_name ~^(?<client_site>.+)\.viviplatform\.com$;
     
-    # Block admin subdomain here
-    if ($client_site = "admin") {
+    # Block app subdomain here
+    if ($client_site = "app") {
       return 404;
     }
     
     # SSL certificates (wildcard certificate for all client site subdomains)
-    ssl_certificate /etc/letsencrypt/live/nectarestates.com/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/nectarestates.com/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/viviplatform.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/viviplatform.com/privkey.pem;
     
     # Security headers
     add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
@@ -144,8 +144,8 @@ http {
     listen 443 ssl http2 default_server;
     server_name _;
     
-    ssl_certificate /etc/letsencrypt/live/nectarestates.com/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/nectarestates.com/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/viviplatform.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/viviplatform.com/privkey.pem;
     
     return 444;  # Close connection without response
   }
