--- a/nginx-ssl.conf
+++ b/nginx-ssl.conf
@@ -58,6 +58,15 @@ http {
       proxy_set_header X-Forwarded-Proto $scheme;
     }
     
+    
+    location /api/token {
+      proxy_pass http://parent/token;
+      proxy_set_header Host $host;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Proto $scheme;
+    }
+    
     location /api/parent/ {
       proxy_pass http://parent;
       proxy_set_header Host $host;
