--- a/parent/requirements.txt
+++ b/parent/requirements.txt
@@ -6,7 +6,8 @@ psycopg2-binary
 python-jose[cryptography]
 PyJWT==2.9.0
 asyncpg==0.29.0
-passlib[bcrypt]
+passlib==1.7.4
+bcrypt==4.0.1
 python-multipart
 httpx
 alembic
