--- a/nginx-ssl.conf
+++ b/nginx-ssl.conf
@@ -17,7 +17,7 @@ http {
   # ADMIN DASHBOARD (dedicated subdomain)
   server {
     listen 80;
-    server_name app.viviplatform.com;
+    server_name homes.viviplatform.com;
     
     # Redirect HTTP to HTTPS
     return 301 https://$server_name$request_uri;
@@ -25,11 +25,11 @@ http {
 
   server {
     listen 443 ssl http2;
-    server_name app.viviplatform.com;
+    server_name homes.viviplatform.com;
     
     # SSL certificates
-    ssl_certificate /etc/letsencrypt/live/viviplatform.com/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/viviplatform.com/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/homes.viviplatform.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/homes.viviplatform.com/privkey.pem;
     
     # Security headers
     add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
@@ -70,12 +70,7 @@ http {
   # CLIENT SITE DASHBOARDS (wildcard subdomain)
   server {
     listen 80;
-    server_name ~^(?<client_site>.+)\.viviplatform\.com$;
-    
-    # Block app subdomain here
-    if ($client_site = "app") {
-      return 404;
-    }
+    server_name ~^(?<client_site>.+)\.homes\.viviplatform\.com$;
     
     # Block access to app paths from client site subdomains
     location ~ ^/app {
@@ -96,16 +91,11 @@ http {
 
   server {
     listen 443 ssl http2;
-    server_name ~^(?<client_site>.+)\.viviplatform\.com$;
-    
-    # Block app subdomain here
-    if ($client_site = "app") {
-      return 404;
-    }
+    server_name ~^(?<client_site>.+)\.homes\.viviplatform\.com$;
     
     # SSL certificates (wildcard certificate for all client site subdomains)
-    ssl_certificate /etc/letsencrypt/live/viviplatform.com/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/viviplatform.com/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/homes.viviplatform.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/homes.viviplatform.com/privkey.pem;
     
     # Security headers
     add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
@@ -144,8 +134,8 @@ http {
     listen 443 ssl http2 default_server;
     server_name _;
     
-    ssl_certificate /etc/letsencrypt/live/viviplatform.com/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/viviplatform.com/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/homes.viviplatform.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/homes.viviplatform.com/privkey.pem;
     
     return 444;  # Close connection without response
   }
