--- a/nginx-ssl.conf
+++ b/nginx-ssl.conf
@@ -42,24 +42,17 @@ http {
       return 404;
     }
     
-    location ~ ^/api/admin {
-      return 404;
-    }
-    
-    location ~ ^/api/parent {
-      return 404;
-    }
-    
-    location / {
-      proxy_pass http://parent-frontend;
+    # Route API calls to parent backend (strip /api prefix)
+    location ~ ^/api/(.*)$ {
+      proxy_pass http://parent/$1;
       proxy_set_header Host $host;
       proxy_set_header X-Real-IP $remote_addr;
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_set_header X-Forwarded-Proto $scheme;
     }
     
-    location /api/ {
-      proxy_pass http://parent/;
+    location / {
+      proxy_pass http://parent-frontend;
       proxy_set_header Host $host;
       proxy_set_header X-Real-IP $remote_addr;
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -74,14 +67,6 @@ http {
     
     # Block access to app paths from client site subdomains
     location ~ ^/app {
-      return 404;
-    }
-    
-    location ~ ^/api/admin {
-      return 404;
-    }
-    
-    location ~ ^/api/parent {
       return 404;
     }
     
@@ -103,8 +88,9 @@ http {
     add_header X-Frame-Options "DENY" always;
     add_header X-XSS-Protection "1; mode=block" always;
     
-    location / {
-      proxy_pass http://frontend;
+    # Route API calls to child backend (strip /api prefix)
+    location ~ ^/api/(.*)$ {
+      proxy_pass http://child/$1;
       proxy_set_header Host $host;
       proxy_set_header X-Real-IP $remote_addr;
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -112,8 +98,8 @@ http {
       proxy_set_header X-Client-Site-ID $client_site;
     }
     
-    location /api/child/ {
-      proxy_pass http://child;
+    location / {
+      proxy_pass http://frontend;
       proxy_set_header Host $host;
       proxy_set_header X-Real-IP $remote_addr;
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
